Item8028: de-(tm)wiki-ify before restructuring
git-svn-id: http://svn.foswiki.org/trunk/TWikiInstallerContrib@6669 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/lib/TWiki/Contrib/TWikiInstallerContrib/Makefile
+++ b/lib/TWiki/Contrib/TWikiInstallerContrib/Makefile
@@ -1,7 +1,7 @@
 
-TWIKIDEV ?= ~/twiki
+FOSWIKIDEV ?= ~/foswiki
 BRANCH ?= DEVELOP
-MakeFor ?= twiki.org-`bin/svnrev.pl`
+MakeFor ?= foswiki.org-`bin/svnrev.pl`
 
 all : help
 
@@ -9,40 +9,40 @@ TAR_EXCLUDE = --exclude CVS --exclude .svn --exclude "*~" --exclude bak
 
 kernel : 
 	[ -e components/kernel ] || mkdir -p components/kernel
-	cd $(TWIKIDEV)/$(BRANCH)/tools/; TWIKI_LIBS=$(TWIKIDEV)/$(BRANCH)/twikiplugins/BuildContrib/lib/ echo "n" | perl build.pl release; cp $(TWIKIDEV)/$(BRANCH)/TWiki.zip $(TWIKIDEV)/$(BRANCH)/twikiplugins/TWikiInstallerContrib/lib/TWiki/Contrib/TWikiInstallerContrib/components/kernel/TWikiKernel$(BRANCH)`$(TWIKIDEV)/$(BRANCH)/twikiplugins/TWikiInstallerContrib/lib/TWiki/Contrib/TWikiInstallerContrib/bin/svnrev.pl`.zip
+	cd $(FOSWIKIDEV)/$(BRANCH)/tools/; FOSWIKI_LIBS=$(FOSWIKIDEV)/$(BRANCH)/BuildContrib/lib/ echo "n" | perl build.pl release; cp $(FOSWIKIDEV)/$(BRANCH)/Foswiki.zip $(FOSWIKIDEV)/$(BRANCH)/FoswikiInstallerContrib/lib/Foswiki/Contrib/FoswikiInstallerContrib/components/kernel/FoswikiKernel$(BRANCH)`$(FOSWIKIDEV)/$(BRANCH)/FoswikiInstallerContrib/lib/Foswiki/Contrib/FoswikiInstallerContrib/bin/svnrev.pl`.zip
 
 $(MakeFor).zip : kernel 
-	zip -r $(MakeFor).zip components/extension/ components/kernel/TWikiKernel$(BRANCH)`bin/svnrev.pl`.*
+	zip -r $(MakeFor).zip components/extension/ components/kernel/FoswikiKernel$(BRANCH)`bin/svnrev.pl`.*
 
 #	zip -r $(MakeFor).zip components/extension/ components/kernel/TWikiKernel$(BRANCH)*.zip
 #	tar --file=$(MakeFor).tar --create $(TAR_EXCLUDE) components/extension/ components/kernel/TWikiKernel$(BRANCH)`bin/svnrev.pl`.*
 
 extensions : 
-	cd $(TWIKIDEV)/$(BRANCH)/tools/; TWIKI_LIBS=$(TWIKIDEV)/$(BRANCH)/twikiplugins/BuildContrib/lib/ perl build_all_extensions.pl
+	cd $(FOSWIKIDEV)/$(BRANCH)/tools/; FOSWIKI_LIBS=$(FOSWIKIDEV)/$(BRANCH)/BuildContrib/lib/ perl build_all_extensions.pl
 	[ -e components/extension ] || mkdir -p components/extension
-	cp $(TWIKIDEV)/$(BRANCH)/twikiplugins/*/*.zip components/extension
+	cp $(FOSWIKIDEV)/$(BRANCH)/*/*.zip components/extension
 
-TWikiFor : $(MakeFor).zip
+FoswikiFor : $(MakeFor).zip
 
-distro : twiki-install extensions $(MakeFor).zip
+distro : foswiki-install extensions $(MakeFor).zip
 
-twiki-install : remote-install ../TWikiInstallerContrib.pm
-	cp remote-install twiki-install
-	cat ../TWikiInstallerContrib.pm >>twiki-install
+foswiki-install : remote-install ../FoswikiInstallerContrib.pm
+	cp remote-install foswiki-install
+	cat ../FoswikiInstallerContrib.pm >>foswiki-install
 
 ################################################################################
 
 publish : publish_components
 
 publish_distro :
-	scp $(MakeFor).zip $(PUBLISH_TO)/twiki.org.zip
+	scp $(MakeFor).zip $(PUBLISH_TO)/foswiki.org.zip
 
-# NOTE: $(PUBLISH_TO)/twiki/components/extension has to already exist :(
+# NOTE: $(PUBLISH_TO)/foswiki/components/extension has to already exist :(
 publish_extensions :
-	scp -r $(TWIKIDEV)/$(BRANCH)/twikiplugins/*/*.zip $(PUBLISH_TO)/twiki/components/extension
+	scp -r $(FOSWIKIDEV)/$(BRANCH)/*/*.zip $(PUBLISH_TO)/foswiki/components/extension
 
 publish_kernels :
-	scp -r components/kernel $(PUBLISH_TO)/twiki/components
+	scp -r components/kernel $(PUBLISH_TO)/foswwiki/components
 
 publish_components : publish_distro publish_kernels publish_extensions
 
@@ -59,7 +59,7 @@ print_settings :
 	@echo Settings
 	@echo ================================================================================
 	@echo MakeFor = $(MakeFor)
-	@echo TWIKIDEV = $(TWIKIDEV)
+	@echo FOSWIKIDEV = $(FOSWIKIDEV)
 	@echo PUBLISH_TO = $(PUBLISH_TO)
 
 print : print_settings
@@ -72,15 +72,15 @@ help : print
 	@echo 
 	@echo make distro - download and bundle extensions + kernel
 	@echo 
-	@echo "make kernel - build TWikiKernel"
+	@echo "make kernel - build FoswikiKernel"
 	@echo "make extensions - build extensions (all of plugins, contribs, addons)"
 	@echo 
 	@echo "make publish - upload distro and extensions + kernels (see below)"
 	@echo "make publish_distro - upload distro"
-	@echo "make publish_kernels - upload built kernels to $PUBLISH_TO/twiki/components/kernel/"
-	@echo "make publish_extensions - upload built extensions to $PUBLISH_TO/twiki/components/extension/"
+	@echo "make publish_kernels - upload built kernels to $PUBLISH_TO/foswiki/components/kernel/"
+	@echo "make publish_extensions - upload built extensions to $PUBLISH_TO/foswiki/components/extension/"
 	@echo 
-	@echo "make twiki-install - builds the installation webscript"
+	@echo "make foswiki-install - builds the installation webscript"
 	@echo 
 	@echo ================================================================================
 	@echo build-options:
